--- a/style.css
+++ b/style.css
@@ -41,9 +41,16 @@ h1 {
 #weather-box button:hover {
     background: gray;
 }
-
+#datetime {
+    color: white;
+    font-size: 1.0rem;
+    margin-bottom: 20px;
+}
 #loc, #temperature {
     color: white;
     font-size: 1.5rem;
     margin-top: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: flex-start;
 }
